@@ -1,3 +1,9 @@
+Tue Nov 10 20:50:19 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:
+
+          Added sequence number to outgoing datagrams.
+
 Mon Nov  9 21:42:25 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/DataSampleHeader.h:
